--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <h1>Dashboard</h1>
-    <a href="/chat.html">Go to Chat</a>
-    <a href="/upload.html">Go to Upload</a>
+    <a href="/static/chat.html">Go to Chat</a>
+    <a href="/static/upload.html">Go to Upload</a>
 </body>
 </html>
