--- a/static/chat.html
+++ b/static/chat.html
@@ -14,6 +14,6 @@
         <input id="name" autocomplete="off" placeholder="Type your message here..." />
         <button type="submit">Send</button>
     </form>
-    <script src="js/scripts.js"></script>
+    <script src="/static/js/scripts.js"></script>
 </body>
 </html>
