--- a/static/login.html
+++ b/static/login.html
@@ -69,7 +69,7 @@
                console.log('Success:', data);
                localStorage.setItem('session_id', data.session_id); // Сохраняем session_id в localStorage
                 if(data.username) {
-                    window.location.href = `/static/chat.html`;
+                    window.location.href = `/static/dashboard.html`; // После логина перенаправляем на dashboard
                 } else {
                     document.getElementById('result').textContent = data.message;
                 }
@@ -78,6 +78,7 @@
                 console.error('Error:', error);
                 document.getElementById('result').textContent = 'Error: ' + error.message;
             });
+            
         });
     </script>
 </body>
