отлично, ну что добавлена красивая меню, слева она есть везде телефон проверен тоже работает проект не за горами

--- a/static/profile.html
+++ b/static/profile.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <h1>Profile</h1>
-    <nav>
-        <a href="/static/chat.html">Chat</a>
-        <a href="/static/dashboard.html">Dashboard</a>
-        <a href="/static/upload.html">Upload</a>
-        <button id="logoutBtn">Logout</button>
+    <nav class="main-menu">
+        <ul>
+            <li><a href="/static/dashboard.html">Dashboard</a></li>
+            <li><a href="/static/chat.html">Chat</a></li>
+            <li><a href="/static/profile.html">Profile</a></li>
+            <li><a href="/static/upload.html">Upload</a></li>
+            <li><button id="logoutBtn">Logout</button></li>
+        </ul>
     </nav>
 
     <div id="profileData">
