--- a/static/upload.html
+++ b/static/upload.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Upload</h1>
+    <nav class="main-menu">
+        <ul>
+            <li><a href="/static/dashboard.html">Dashboard</a></li>
+            <li><a href="/static/chat.html">Chat</a></li>
+            <li><a href="/static/profile.html">Profile</a></li>
+            <li><a href="/static/upload.html">Upload</a></li>
+            <li><button id="logoutBtn">Logout</button></li>
+        </ul>
+    </nav>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" id="file" name="file" required>
         <button type="submit">Upload</button>
