--- a/static/upload.html
+++ b/static/upload.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>Upload</h1>
-    <nav class="main-menu">
+     <nav class="main-menu">
         <ul>
             <li><a href="/static/dashboard.html">Dashboard</a></li>
             <li><a href="/static/chat.html">Chat</a></li>
@@ -17,43 +16,111 @@
             <li><button id="logoutBtn">Logout</button></li>
         </ul>
     </nav>
+
+    <h1>Upload</h1>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" id="file" name="file" required>
         <button type="submit">Upload</button>
     </form>
     <div id="result"></div>
+
+    <h2>Uploaded Files</h2>
+    <ul id="fileList"></ul>
+
     <script>
-        document.getElementById('uploadForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const fileInput = document.getElementById('file');
-            const file = fileInput.files[0];
-
-            if (!file) {
-                document.getElementById('result').textContent = 'Please select a file to upload.';
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append('file', file);
-
-            fetch('/api/upload', {
+        document.getElementById('logoutBtn').addEventListener('click', function() {
+            fetch('/api/logout', {
                 method: 'POST',
-                body: formData
+                headers: {
+                    'Content-Type': 'application/json'
+                },
             })
             .then(response => {
-                if (!response.ok) {
-                    return response.text().then(text => { throw new Error('Network response was not ok: ' + text) });
+                if (response.ok) {
+                    window.location.href = '/static/choice.html';
+                } else {
+                    alert('Logout failed.');
                 }
-                return response.json();
             })
-            .then(data => {
-                console.log('Success:', data);
-                document.getElementById('result').textContent = 'Success: ' + JSON.stringify(data);
-            })
-            .catch((error) => {
+            .catch(error => {
                 console.error('Error:', error);
-                document.getElementById('result').textContent = 'Error: ' + error.message;
+                alert('Logout failed.');
+            });
+        });
+        document.addEventListener('DOMContentLoaded', function() {
+
+            // Function to fetch and display files
+            function fetchFiles() {
+                fetch('/api/files', {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to load file list');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                            console.log('API Response:', data);
+                    const fileList = document.getElementById('fileList');
+                    fileList.innerHTML = ''; // Clear existing list
+                         if (data && Array.isArray(data)) {
+                    data.forEach(file => {
+                        const li = document.createElement('li');
+                        const a = document.createElement('a');
+                        a.href = `/uploaded/${file.filename}`;
+                        a.textContent = `${file.filename}   file_id  ${file.file_id}`;
+                        li.appendChild(a);
+                        fileList.appendChild(li);
+                    });
+                         } else {
+                    console.error('Invalid data structure:', data);
+                    document.getElementById('fileList').textContent = 'Failed to load file list due to invalid data format.';
+                }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    document.getElementById('fileList').textContent = 'Failed to load file list.';
+                });
+            }
+
+            // Call fetchFiles on page load
+            fetchFiles();
+
+            document.getElementById('uploadForm').addEventListener('submit', function(event) {
+                event.preventDefault();
+
+                const fileInput = document.getElementById('file');
+                const file = fileInput.files[0];
+
+                if (!file) {
+                    document.getElementById('result').textContent = 'Please select a file to upload.';
+                    return;
+                }
+
+                const formData = new FormData();
+                formData.append('file', file);
+
+                fetch('/api/upload', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        return response.text().then(text => { throw new Error('Network response was not ok: ' + text) });
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    fetchFiles()
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                    document.getElementById('result').textContent = 'Error: ' + error.message;
+                });
             });
         });
     </script>
