--- a/static/upload.html
+++ b/static/upload.html
@@ -5,18 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/menu.css">
+    <link rel="stylesheet" href="/static/css/forms.css">  <!--  Общие стили для форм -->
+    <link rel="stylesheet" href="/static/css/upload.css">  <!--  Стили, специфичные для upload.html -->
 </head>
 <body>
-     <nav class="main-menu">
-        <ul>
-            <li><a href="/static/dashboard.html">Dashboard</a></li>
-            <li><a href="/static/chat.html">Chat</a></li>
-            <li><a href="/static/profile.html">Profile</a></li>
-            <li><a href="/static/upload.html">Upload</a></li>
-            <li><button id="logoutBtn">Logout</button></li>
-        </ul>
-    </nav>
-
+    <div id="menu-container"></div>
     <h1>Upload</h1>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" id="file" name="file" required>
@@ -27,26 +21,9 @@
     <h2>Uploaded Files</h2>
     <ul id="fileList"></ul>
 
+    <script src="/static/js/menu.js"></script>
+    <script src="/static/js/scripts.js"></script>
     <script>
-        document.getElementById('logoutBtn').addEventListener('click', function() {
-            fetch('/api/logout', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-            })
-            .then(response => {
-                if (response.ok) {
-                    window.location.href = '/static/choice.html';
-                } else {
-                    alert('Logout failed.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('Logout failed.');
-            });
-        });
         document.addEventListener('DOMContentLoaded', function() {
 
             // Function to fetch and display files
