--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -1,42 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/menu.css">
+    <link rel="stylesheet" href="/static/css/forms.css">
+    <link rel="stylesheet" href="/static/css/dashboard.css">
 </head>
 <body>
+    <div id="menu-container"></div>
     <h1>Dashboard</h1>
-    <nav class="main-menu">
-        <ul>
-            <li><a href="/static/dashboard.html">Dashboard</a></li>
-            <li><a href="/static/chat.html">Chat</a></li>
-            <li><a href="/static/profile.html">Profile</a></li>
-            <li><a href="/static/upload.html">Upload</a></li>
-            <li><button id="logoutBtn">Logout</button></li>
-        </ul>
-    </nav>
-    <script>
-        document.getElementById('logoutBtn').addEventListener('click', function() {
-            fetch('/api/logout', {
-                method: 'POST', // Или GET, в зависимости от реализации бэкенда
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-            })
-            .then(response => {
-                if (response.ok) {
-                    window.location.href = '/static/choice.html'; // Перенаправляем на страницу логина
-                } else {
-                    alert('Logout failed.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('Logout failed.');
-            });
-        });
-    </script>
+
+    <script src="/static/js/menu.js"></script>
+    <script src="/static/js/scripts.js"></script>
 </body>
 </html>
