--- a/static/chat.html
+++ b/static/chat.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/css/chat.css">
 </head>
 <body>
-    <div id="menu-container"></div>
+    <nav id="menu-container"></nav>
     <h1>Chat</h1>
     <p id="connection-status">Connecting</p>
     <ul id="messages"></ul>
