--- a/static/profile.html
+++ b/static/profile.html
@@ -6,7 +6,7 @@
     <title>Profile</title>
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/menu.css">
-    <!--  <link rel="stylesheet" href="/static/css/forms.css">  Если нужен -->
+    <link rel="stylesheet" href="/static/css/forms.css"> 
     <link rel="stylesheet" href="/static/css/profile.css">  <!-- Если есть специфичные стили -->
 </head>
 <body>
